--- a/index.html
+++ b/index.html
@@ -1,104 +1,180 @@
 <!DOCTYPE html>
 <html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="style.css" />
+    <link
+    rel="stylesheet"
+    href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"
+  />
 
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css">
     <title>Huddle-page</title>
-</head>
-
-<body>
+  </head>
+  <body>
+    <!-- header -->
     <header>
-        <!-- header -->
+      <!-- nav -->
+      <nav class="container">
+        <img src="assets/logo.svg" class="animate_animated animate_shakeX" alt="huddle-logo"
+        />
+        <button>Try It Free</button>
+      </nav>
 
-
-        <!-- nav-->
-        <nav>
-            <img src="assets/logo.svg" alt="Huddle-page">
-            <button>Try it Free</button>
-
-
-        </nav>
-        <!-- hero section -->
-        <section class="container hero-section">
-            <div class="hero-content">
-                <h2>
-                    Build the Commiuty Your Fans will Love
-
-                </h2>
-                <p>
-                    Huddle re-imagines the way we build communities.
-                    You have a voice, but so does your audience.Create connections with your users
-                    as you engage in genuine discussions
-                </p>
-                <button>get started for free</button>
-
-            </div>
-            <div>
-
-                <img src="assets/illustration-mockups.svg" alt="mockups-pic">
-            </div>
-
-
-        </section>
-
-    </header>
-
-    <!-- main -->
-    <main class="container main">
-        <!-- card1-->
-        <section class="cards" id="cards-1">
-            <img src="assets/illustration-grow-together.svg" alt="growth mockups-pic">
-
-            <div>
-
-                <h2>Grow together</h2>
-                <p>Generate meaniful discussions with your adience and build a strong,loyal
-                    community.Think of the insightful conversations you miss out with a
-                    feedback form.
-                </p>
-
-            </div>
-
-        </section>
-    </main>
-    
-    <main class="container main">
-        <!-- card2-->
-        <section class="cards" id="cards-2">
-            <img src="assets/illustration-flowing-conversation.svg" alt="flowing-conversations-pic">
-
-            <div>
-
-                <h2>Growing conversations</h2>
-                <p>you wouldnt paginate a conversation in real life, so why do it
-                    online ? our tread have just -in-time loading for more natural flow.
-                </p>
-
-            </div>
-
-        </section>
-    </main>
-    <!-- card3-->
-    <section class="cards" id="cards-3">
-        <img src="assets/illustration-your-users.svg" alt="your-user">
-
-        <div>
-
-            <h2>Your user</h2>
-            <p> It takes no time at all to integrate Huddle with your app's authentication solution. This means, once
-                signed in to your app, your users can start chatting immediately.
-
-            </p>
-
+      <!-- hero section -->
+      <section class="container hero-section">
+        <div class="hero-content">
+          <h2>Build The Community Your Fans Will Love</h2>
+          <p>
+            Huddle re-imagines the way we build communities. You have a voice,
+            but so does your audience. Create connections with your users as you
+            engage in genuine discussions
+          </p>
+          <button>Get Started For Free</button>
         </div>
 
+        <div>
+          <img src="assets/illustration-mockups.svg" alt="svg" />
+        </div>
+      </section>
+    </header>
+<!-- main -->
+<main class="container main">
+    <!-- first section -->
+    <section class="cards" id="card-1">
+      <div>
+        <img
+          src="/assets/illustration-grow-together.svg"
+          alt="grow together"
+        />
+      </div>
+
+      <div class="cards-contents">
+        <h2>Grow Together</h2>
+        <p>
+          Generate meaninful discussions with your audience and build a
+          strong, loyal community. Think of the insightful conversations you
+          miss out with a feedback form.
+        </p>
+      </div>
     </section>
-    </main>
 
+    <!-- second section -->
+    <section class="cards" id="card-2">
+      <div>
+        <img
+          src="/assets/illustration-flowing-conversation.svg"
+          alt="flowing conversation"
+        />
+      </div>
 
+      <div class="cards-contents">
+        <h2>Flowing Conversations</h2>
+        <p>
+          You wouldn't not paginate a conversation in real life, so why do it
+          online? Our threads have just-in-time loading for a more natural
+          flow.
+        </p>
+      </div>
+    </section>
 
-</body>
+    <section class="cards" id="card-3">
+      <div>
+        <img src="/assets/illustration-your-users.svg" alt="your users" />
+      </div>
 
-</html>
+      <div class="cards-contents">
+        <h2>Your Users</h2>
+        <p>
+          It takes no time at all to integrate Huddle with your app's
+          authentication solution. This means once signed in to your app, your
+          users can start charting immediately.
+        </p>
+      </div>
+    </section>
+  </main>
+
+<!-- footer --> 
+<footer class="main-footer">
+    <!-- sign-up -->
+
+    <section class="sign-up container">
+      <div>
+        <h2><marquee behavior="" direction="">Ready To Build Your Community?</marquee></h2>
+      </div>
+      <div>
+        <button>Get Started For Free</button>
+      </div>
+    </section>
+
+    <!-- first section -->
+    <div class="wrapper">
+    <section class="footer-section-1" class="footer-section">
+      <div>
+        <img src="/assets/logo-white.svg" alt="" />
+      </div>
+      <div class="contact-flex">
+        <img
+          src="/assets/icon-location.svg"
+          class="contact-img location-img"
+          alt=""
+        />
+        <p class="location-p">
+            Lorem ipsum dolor sit amet consectetur, adipisicing elit. Ex
+            voluptates explicabo asperiores reiciendis necessitatibus tempora
+            commodi assumenda sapiente quia.
+          </p>
+        </div>
+        <div class="contact-flex">
+          <img src="/assets/icon-phone.svg" class="contact-img" alt="" />
+          <p>+234-813-231-5538</p>
+        </div>
+        <div class="contact-flex">
+          <img src="/assets/icon-email.svg" class="contact-img" alt="" />
+          <p>sammyballer26@gmail.com</p>
+        </div>
+      </section>
+
+      <!-- second section -->
+      <section class="footer-section">
+        <ul class="footer-links">
+          <li><a href="">About Us</a></li>
+          <li><a href="">What We Do</a></li>
+          <li><a href="">FAQ</a></li>
+        </ul>
+      </section>
+
+      <!-- third section -->
+      <section class="footer-section">
+        <ul class="footer-links links-2">
+            <li><a href="">Career</a></li>
+          <li><a href="">Blog</a></li>
+          <li><a href="">Contact Us</a></li>
+        </ul>
+      </section>
+
+      <!-- fourth section -->
+      <section class="icon-container" class="footer-section">
+        <div class="icon-box">
+          <ion-icon name="logo-facebook" class="icon"></ion-icon>
+          <ion-icon name="logo-twitter" class="icon"></ion-icon>
+          <ion-icon name="logo-instagram" class="icon"></ion-icon>
+        </div>
+
+        <div class="copyright">
+            <p>&copy;Copyright 2018 Huddle. All rights reserved</p>
+          </div>
+        </section>
+      </footer>
+    </div>
+      <script
+        type="module"
+        src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"
+      ></script>
+      <script
+        nomodule
+        src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"
+      ></script>
+    </body>
+  </html>
+
