--- a/index.html
+++ b/index.html
@@ -127,14 +127,15 @@
         </div>
         <div class="contact-flex">
           <img src="/assets/icon-phone.svg" class="contact-img" alt="" />
-          <p>+234-813-231-5538</p>
+          <p>+234-8118470702</p>
         </div>
         <div class="contact-flex">
           <img src="/assets/icon-email.svg" class="contact-img" alt="" />
-          <p>sammyballer26@gmail.com</p>
+          <p>oguebuka111@gmail.com</p>
         </div>
       </section>
 
+      
       <!-- second section -->
       <section class="footer-section">
         <ul class="footer-links">
